change search bar on homepage

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,18 @@ body {
   box-sizing: border-box;
 }
 
+.landingPage {
+  background: url(assets/amsterdam.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+}
+
+.landingPage h1 {
+  text-align: center;
+}
 
 .map-article {
   margin: 20px auto;
