--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 }
 
 .landingPage {
-  background: url(assets/amsterdam.jpg) no-repeat center center fixed;
+  background: url(assets/barcelona.jpg) no-repeat top center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -15,8 +15,16 @@ body {
   height: 100vh;
   display: grid;
   justify-content: center;
-  align-content: center;
   justify-items: center;
+}
+
+.countrySelection {
+  justify-content: center;
+  display: grid;
+}
+
+.css-b62m3t-container {
+  color: black;
 }
 
 .landingPage-Content {
@@ -24,6 +32,8 @@ body {
   border-radius: 30px;
   text-align: center;
   color: white;
+  height: 28vh;
+  margin-top: 10vh;
 }
 
 .title-landingPage {
