--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,35 @@ body {
   box-sizing: border-box;
 }
 
+body::before {
+  background: url(assets/amsterdam.jpg) no-repeat center center fixed;
+  content: '';
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  position:absolute;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4);
+}
+
+.mapgallery-bar {
+  margin: 0;
+  background-color: #fafafa73;
+}
+
+
 .landingPage {
   background: url(assets/amsterdam.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -162,4 +191,8 @@ body {
 .album h3 {
   text-align: center;
   padding-bottom: 1vh;
+}
+
+.bg-body-tertiary{
+  background-color: #fefefe05;
 }
