--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
   border-radius: 30px;
   text-align: center;
   color: white;
-  height: 28vh;
+  height: fit-content;
   margin-top: 10vh;
 }
 
