--- a/src/LoadPage.css
+++ b/src/LoadPage.css
@@ -17,8 +17,22 @@
     animation-timing-function: linear;
 }
 
+.frame {
+    /*position: absolute;*/
+    margin-top: 58vh;
+    width: 10vw;
+    position: relative;
+    animation: myMove2 20s infinite;
+    animation-timing-function: linear;
+}
+
 @keyframes myMove {
     0%   {left: -10%;}
+    100% {left: 110%;}
+}
+
+@keyframes myMove2 {
+    0%   {left: 10%;}
     100% {left: 110%;}
 }
 
