--- a/src/LoadPage.css
+++ b/src/LoadPage.css
@@ -10,7 +10,7 @@
 
 .frame {
     /*position: absolute;*/
-    margin-top: 58vh;
+    margin-top: 62vh;
     width: 10vw;
     position: relative;
     animation: myMove 20s infinite;
@@ -29,7 +29,9 @@
     grid-column: 3 / span 1;
 }
 
-body {
+.loading-background {
     background: url(assets/1008.jpg) no-repeat center center fixed;
     background-size: cover;
+    height: 100vh;
+
 }
