--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@ body::before {
 
 }
 
+.singleMapTitle {
+  color: rgb(106	68	241);
+  background-color: #fafafab3;
+  border-radius: 5px;
+  width: fit-content;
+  margin: auto;
+}
+
 .mapgallery-bar {
  width: 100%;
   background-color: #fafafab3;
