--- a/src/css/LoadPage.css
+++ b/src/css/LoadPage.css
@@ -10,10 +10,10 @@
 
 .frame {
     /*position: absolute;*/
-    margin-top: 62vh;
+    margin-top: 45vh;
     width: 10vw;
-    position: relative;
-    animation: myMove 20s infinite;
+    position: fixed;
+    animation: myMove 10s infinite;
     animation-timing-function: linear;
 }
 
@@ -22,16 +22,76 @@
     100% {left: 110%;}
 }
 
-.frame-end {
-    /*position: absolute;*/
-    width: 20vw;
-    grid-row: 2 / span 1;
-    grid-column: 3 / span 1;
+@keyframes myMove2 {
+    0%   {left: -30%;}
+    100% {left: 90%;}
 }
+
+@keyframes myMove3 {
+    0%   {left: -50%;}
+    100% {left: 70%;}
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0}
+    1% {opacity: 100}
+    100% {opacity: 100}
+}
+
+.frame2 {
+    /*position: absolute;*/
+    margin-top: 45vh;
+    width: 10vw;
+    position: fixed;
+    animation:
+            myMove2 10s infinite,
+            fadeIn 100s;
+    animation-timing-function: linear;
+    animation-delay: 10.1s;
+    opacity: 0;
+}
+
+.frame3 {
+    /*position: absolute;*/
+    margin-top: 45vh;
+    width: 10vw;
+    position: fixed;
+    animation:
+            myMove3 10s infinite,
+            fadeIn 100s;
+    animation-timing-function: linear;
+    animation-delay: 20.3s;
+    opacity: 0;
+}
+
+/*.frame2b {*/
+/*    !*position: absolute;*!*/
+/*    margin-top: 62vh;*/
+/*    width: 10vw;*/
+/*    position: relative;*/
+/*    animation: fadeIn 1s infinite;*/
+/*    animation-delay: 26s;*/
+/*}*/
 
 .loading-background {
     background: url(../assets/1008.jpg) no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
+}
 
+.loadingMessages {
+    color: black;
+    font-size: 1.5em;
+    display: grid;
+    padding-top: 10vh;
+    width: 45vw;
+    grid-column: 1 / span 2;
+    justify-self: center;
+    text-align: center;
+}
+
+.lp-container {
+    display: grid;
+    width: 100vw;
+    grid-template-columns: 1fr 1fr;
 }
