--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 body {
   /*font-family: Arial, sans-serif;*/
-  margin: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  height: 100%;
+  margin: 0;
 
 }
 
 body::before {
   background: url(../assets/amsterdam-full.jpg) center center fixed;
   content: '';
+  top: 0px;
   z-index: -1;
   width: 100%;
   height: 100%;
@@ -19,14 +21,22 @@ body::before {
   -o-background-size: cover;
   background-size: cover;
   -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
+
   filter: blur(5px);
-  background-position: center;
-  background-repeat: repeat;
 
 }
+
+/*.mapgallery-root {*/
+/*  background: url(../assets/amsterdam-full.jpg) no-repeat top center fixed;*/
+/*  -webkit-background-size: cover;*/
+/*  -moz-background-size: cover;*/
+/*  -o-background-size: cover;*/
+/*  background-size: cover;*/
+/*  height: 100vh;*/
+/*  display: grid;*/
+/*  justify-content: center;*/
+/*  justify-items: center;*/
+/*}*/
 
 .singleMapTitle {
   color: rgb(106	68	241);
@@ -55,27 +65,25 @@ body::before {
 
 }
 .result-title {
-  color: white;
+
   padding: 10px 0px;
   margin-bottom: 0;
   border-radius: 5px;
-  color:#3d3637;
+
 }
 .result-title h5 {
   color: white;
+  margin: 0;
 }
 .searchLabel{
   opacity: 0;
 }
-.searchbar-gallery {
-  align-content: center;
-}
+
 .save-button {
   float: left;
 }
-.result-title h5{
-  margin: 0;
-}
+
+
 
 .landingPage {
   background: url(../assets/barcelona.jpg) no-repeat top center fixed;
@@ -105,6 +113,14 @@ body::before {
   color: white;
   height: fit-content;
   margin-top: 10vh;
+}
+.searchbar-gallery {
+  background-color: rgba(72, 72, 72, 0.62);
+  border-radius: 20px;
+  text-align: center;
+  color: white;
+  height: fit-content;
+  width: 50vh;
 }
 
 .title-landingPage {
@@ -191,7 +207,7 @@ body::before {
 }
 
 .searchbar {
-  padding: 20px;
+  padding-bottom: 20px;
 }
 .search-button {
   margin-top: 25px;
@@ -250,15 +266,18 @@ body::before {
 .bg-body-tertiary{
   background-color: #fefefe05;
 }
-/*.card-body {*/
-/*  background: linear-gradient(0deg, rgba(124,88,214,1) 0%, rgba(178,147,255,1) 100%);*/
 
-/*}*/
-/*.card-body .card-title*/
-/*{*/
-/*  color: white;*/
-/*}*/
+.card-body .card-title {
+  font-family: Montserrat;
+  color: #555069;
+}
 .card-body .list-group-item
 {
   color: #8d8b8b;
+}
+.card-body hr {
+  margin-top: 0;
+}
+.icons {
+  color: #6f55dc;
 }
