--- a/src/css/App.css
+++ b/src/css/App.css
@@ -381,3 +381,11 @@ body *{
   align-items: center;
   margin: auto;
 }
+
+.profile-photo {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%
+
+
+}
