--- a/src/css/App.css
+++ b/src/css/App.css
@@ -69,17 +69,17 @@ body *{
 }
 .result-title {
   padding: 5px 10px;
-  margin-bottom: 0;
   border-radius: 5px;
   background-color: white;
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 
 }
 .result-title h5 {
-  color: black;
+  color: #555069;
   margin: 0;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: bold;
 }
 .searchLabel{
   opacity: 0;
@@ -129,6 +129,7 @@ body *{
   color: white;
   height: fit-content;
   width: 50vh;
+  margin-bottom: 10px
 }
 
 .title-landingPage {
@@ -378,6 +379,7 @@ body *{
   width: 70px;
   height: 70px;
   border-radius: 50%
+}
 
 .route-buttons {
   display: flex;
@@ -410,6 +412,7 @@ body *{
 /*}*/
 
 .text-end {
+  text-align: center;
 
 
 }
@@ -420,4 +423,20 @@ body *{
   padding: 5px 10px;
   border-radius: 4px;
   font-size: 15px;
+}
+
+.mapgallery .card-footer {
+  background-color: white;
+}
+.mapgallery .card-text{
+  height: 100px;
+}
+.mapgallery-root .mapgallery-bar .profile-photo {
+  display: none;
+}
+.mapgallery {
+  margin-bottom: 50px;
+}
+.saved-route-page .card-footer {
+  background-color: white;
 }
