--- a/src/css/App.css
+++ b/src/css/App.css
@@ -17,9 +17,9 @@ body {
 /*}*/
 
 
-body *{
-  font-family: "Coolvetica rg", sans-serif;
-}
+/*body *{*/
+/*  font-family: "Coolvetica rg", sans-serif;*/
+/*}*/
 
 .background-image {
   background: url(../assets/amsterdam-full.jpg) repeat center center fixed;
@@ -47,7 +47,6 @@ body *{
 }
 
 .singleMapInfo {
-  background-color: #fafafab3;
   border-radius: 5px;
   width: fit-content;
   height: fit-content;
@@ -65,9 +64,10 @@ body *{
 
 }
 .result-title {
+  font-weight: bolder;
   padding: 5px 10px;
   border-radius: 5px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.37);
   text-align: center;
   margin-bottom: 30px;
 
@@ -120,8 +120,6 @@ body *{
   margin-top: 10vh;
 }
 .searchbar-gallery {
-  background-color: rgba(72, 72, 72, 0.62);
-  border-radius: 10px;
   text-align: center;
   color: white;
   height: fit-content;
@@ -238,7 +236,6 @@ body *{
   font-size: 25px;
   margin: 30px 20px 20px;
 }
-
 
 .searchbar {
   padding-bottom: 10px;
@@ -430,21 +427,33 @@ body *{
 .mapgallery .card-text{
   height: 100px;
 }
-.mapgallery-root .mapgallery-bar .profile-photo {
-  display: none;
-}
 .mapgallery {
   margin-bottom: 50px;
 }
 .saved-route-page .card-footer {
   background-color: white;
-
+}
 .single-map-export-buttons {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
   width: 100%;
+}
 
+.single-map-export-buttons > a > button {
+  background-color: #6A44F1;
+  height: 5vh;
+  color: white;
+}
+
+.single-map-export-buttons > a > button:hover {
+  background-color: white;
+  color: #6A44F1;;
+}
+
+
+.singleMapInfo > p {
+  font-size: 18px;
 }
 
 .single-map-export-buttons > a {
@@ -457,7 +466,17 @@ body *{
   padding: 10px;
 }
 
-.mapCardSingle {
-  background-color: rgb(255, 255, 255) !important;
-  margin-left: 10px;
+.map-single-container {
+  background-color: rgba(255, 255, 255, 0.74);
+  padding: 20px;
+}
+
+.waypoints-titles {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.waypoints-titles h6 {
+  font-weight: 300;
+  font-size: 18px;
 }
