--- a/src/css/LoadPage.css
+++ b/src/css/LoadPage.css
@@ -1,35 +1,27 @@
-/*.gif-container {*/
-/*    width: 100%;*/
-/*    !*padding-bottom: 100%;*!*/
-/*    !*position: relative;*!*/
-/*    display: grid;*/
-/*    grid-template-columns: 1fr 1fr 1fr;*/
-/*    grid-template-rows: 1fr 1fr 1fr;*/
-/*    height: 100vh;*/
-/*}*/
+
 
 .frame {
     /*position: absolute;*/
-    margin-top: 62vh;
+    margin-top: 60vh;
     width: 10vw;
-    position: relative;
-    animation: myMove 10s infinite;
+    position: absolute;
+    animation: myMove 20s infinite;
     animation-timing-function: linear;
 }
 
 @keyframes myMove {
-    0%   {left: -10%;}
-    100% {left: 110%;}
+    0%   {left: -20%;}
+    100% {left: 105%;}
 }
 
 @keyframes myMove2 {
-    0%   {left: -30%;}
-    100% {left: 90%;}
+    0%   {left: -20%;}
+    100% {left: 105%;}
 }
 
 @keyframes myMove3 {
-    0%   {left: -50%;}
-    100% {left: 70%;}
+    0%   {left: -20%;}
+    100% {left: 105%;}
 }
 
 @keyframes fadeIn {
@@ -38,53 +30,71 @@
     100% {opacity: 100}
 }
 
+@keyframes fadeIn2 {
+    0% {opacity: 0}
+    50% {opacity: 100}
+    100% {opacity: 0}
+}
+
 .frame2 {
     /*position: absolute;*/
-    margin-top: 62vh;
+    margin-top: 60vh;
     width: 10vw;
-    position: relative;
+    position: absolute;
     animation:
-            myMove2 10s infinite,
+            myMove2 20s infinite,
             fadeIn 100s;
     animation-timing-function: linear;
-    animation-delay: 10.1s;
+    animation-delay: 43s;
     opacity: 0;
 }
 
 .frame3 {
     /*position: absolute;*/
-    margin-top: 62vh;
+    margin-top: 60vh;
     width: 10vw;
-    position: relative;
+    position: absolute;
     animation:
-            myMove3 10s infinite,
+            myMove3 20s infinite,
             fadeIn 100s;
     animation-timing-function: linear;
-    animation-delay: 20.3s;
+    animation-delay: 21.5s;
     opacity: 0;
 }
 
-/*.frame2b {*/
-/*    !*position: absolute;*!*/
-/*    margin-top: 62vh;*/
-/*    width: 10vw;*/
-/*    position: relative;*/
-/*    animation: fadeIn 1s infinite;*/
-/*    animation-delay: 26s;*/
-/*}*/
-
-
-
-.frame-end {
+.frame4 {
     /*position: absolute;*/
-    width: 20vw;
-    grid-row: 2 / span 1;
-    grid-column: 3 / span 1;
+    margin-top: 60vh;
+    width: 10vw;
+    position: absolute;
+    animation:
+            myMove3 20s infinite,
+            fadeIn2 2s infinite;
+    animation-timing-function: linear;
+    animation-delay: 64.5s;
+    opacity: 0;
 }
+
+.loadingMessages {
+    color: black;
+    font-size: 1.5em;
+    display: grid;
+    padding-top: 10vh;
+    width: 45vw;
+    grid-column: 1 / span 2;
+    justify-self: center;
+    text-align: center;
+}
+
+.lp-container {
+    display: grid;
+    width: 100vw;
+    grid-template-columns: 1fr 1fr;
+}
+
 
 .loading-background {
     background: url(../assets/1008.jpg) no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
-
 }
